# pptx-speech

./: .gitignore  Dockerfile_dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pptx-speech-docker.yaml
doc/: example-animation.pptx  example.pptx  op.md
pptx_speech/: __init__.py  cli.py
pptx_speech/cmd/: cli.py  speech_synthesis.py
pptx_speech/image/: pdf.py
pptx_speech/note/: note.py
pptx_speech/tts/: azure.py
pptx_speech/video/: ffmpeg.py
script/: init.sh  setup.sh
src/fe/: .env.development  index.html
src/fe/src/: App.tsx  Task.tsx
src/pptx-speech/: .dockerignore  .gitignore  Dockerfile  Dockerfile_dev  README.md  pyproject.toml
src/pptx-speech/pptx_speech/: be.py  cli.py  dev.py
src/pptx-speech/pptx_speech/common/: config.py  logger.py
src/pptx-speech/pptx_speech/note/: __init__.py
src/pptx-speech/pptx_speech/tts/: azure.py
src/pptx-speech/pptx_speech/video/: ffmpeg.py
src/pptx-speech/script/: entrypoint.sh
